# Xpen

./: .gitignore  POINT.md  Python Project Report.pages  README.md  SOURCE.md  pyproject.toml
xpen/: __init__.py  account.py  preference.py  resource.py  widget.py
xpen/application/: __init__.py  account.py  auxiliary.py  calendar.py  filter.py  message.py  observer.py  record.py  widget.py
xpen/backend/: __init__.py  __init__.txt  account.py  corrupted.py  history.py  observer.py  preference.py  resource.py
